with smartimageview and chromeview ready

--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,5 @@
 target=android-19
 android.library.reference.1=..\\actionbarsherlock
 android.library.reference.2=..\\MessageBarActivity
-android.library.reference.3=../SlidingLayerLibrary
+android.library.reference.3=..\\SlidingLayerLibrary
+android.library.reference.4=../chromeview
